# Agentic-RAG

./: ingestion.py  main.py  pyproject.toml
.chroma/c850e742-0388-4806-a037-b9fb23b408df/: index_metadata.pickle
graph/: consts.py  graph.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
